    * Updates the Federation API classes (breaking changes).
    * Updates TrustChain and TrustChain resolver (breaking changes).
    * Factors out common federation JWT methods into JWTUtils.
    * Adds trust_chain support in AuthorizationRequest and
      AuthenticationRequest.
    * Adds static ClaimsSet.getJSONArrayClaim method.

version 10.1 (2022-10-27)
    * Adds HTTPRequestConfigurator interface.
    * Adds new static OIDCProviderMetadata.resolve(Issuer,
      HTTPRequestConfigurator) method.
    * Adds new static AuthorizationServerMetadata.resolve(Issuer,
      HTTPRequestConfigurator) method.

version 10.2 (2022-10-31)
    * TrustMarkStatusRequest must use HTTP POST.

version 10.2.1 (2022-12-05)
    * Fixes OIDCProviderMetadata backchannel_logout_session_supported parse bug
      (iss #404).

version 10.3 (2022-12-06)
    * Updates EntityListingRequest to support entity_type parameter.
    * Adds OAuth2Error.UNSUPPORTED_PARAMETER (unsupported_parameter) error.
    * Updates FederationEntityMetadata to support
      federation_trust_mark_status_endpoint and logo_uri.
    * Deprecates EntityType.TRUST_MARK_ISSUER.
    * Deprecates TrustMarkIssuerMetadata.
    * Deprecates CommonFederationClaimsSet.getTrustMarkIssuerMetadata.
    * Deprecates EntityStatementClaimsSet.setTrustMarkIssuerMetadata.

version 10.3.1 (2022-12-13)
    * TrustMarkClaimsSet must throw ParseException when validating JWTClaimsSet
      with missing "id" claim (iss #405).

version 10.4 (2022-12-13)
    * Renames EntityStatementRetriever.fetchSelfIssuedEntityStatement to
      fetchEntityConfiguration (breaking change).
    * Fixes the DefaultTrustChainRetriever#fetchStatementsFromAuthorities
      ResolveException message (iss #407).

version 10.5 (2023-01-12)
    * Adds AuthenticationRequestDetector.isLikelyOpenID(AuthorizationRequest)
      static method.

version 10.5.1 (2023-01-23)
    * Updates Nimbus JOSE+JWT to 9.29